--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
  <header>   
     <div class="container">
         <a href="#" class="logo">
-            
+            <img decoding="async" src="images/logo.jpg" alt="Logo" />
         </a>
+        <nav>
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+            </ul>
     </div>
 </body>
 </html>
