--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="form">
     </div>
 </body>
 </html>
