--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <img decoding="async" src="images/logo.jpg" alt="Logo" />
         </a>
         <nav>
+            <i class="fas fa-bars toggle-menu"></i>
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Services</a></li>
