--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             </ul>
             <div class="form">
                 <i class="fas fa-search"></i>
+            </div>
+        </nav>
     </div>
+</header>
+<!-- End Header -->
+<!-- Start Landing -->
+</header>
+<div class="landing">
 </body>
 </html>
