--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </header>
 <div class="landing">
     <div class="overlay">
-        
+        <div class="text"></div>
     </div>
 </body>
 </html>
