--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 </header>
 <div class="landing">
     <div class="overlay">
-        <div class="text"></div>
+        <div class="text">
+            <div class="text"></div>
+        </div>
     </div>
 </body>
 </html>
