--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <div class="landing">
     <div class="overlay">
         <div class="text">
-            <div class="text"></div>
+            <div class="content">
+                <h2>
+            </div>
         </div>
     </div>
 </body>
