--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   </p>
             </div>
         </div>
+        <i class="fas fa-angle-left change-background fa-2x"></i>
     </div>
 </body>
 </html>
