--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
         <i class="fas fa-angle-left change-background fa-2x"></i>
         <i class="fas fa-angle-right change-background fa-2x"></i>
+        <ul class="bullets">
     </div>
 </body>
 </html>
