--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <ul class="bullets">
             <li></li>
             <li class="active"></li>
+            <li></li>
+        </ul>
     </div>
+    <!-- End Landing -->
 </body>
 </html>
