--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     </div>
     <!-- End Landing -->
      <!-- Start Services -->
-     <div class="services"></div>
+     <div class="services">
+        <div class="container">
+     </div>
 </body>
 </html>
