--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
      <!-- Start Services -->
      <div class="services">
         <div class="container">
+            <div class="main-heading">
      </div>
 </body>
 </html>
