--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
      <div class="services">
         <div class="container">
             <div class="main-heading">
+                <h2>Services</h2>
      </div>
 </body>
 </html>
