add services container

--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
                     tincidunt.
                   </p>
      </div>
+     <div class="services-container">
+        
+     </div>
 </body>
 </html>
