--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                   </p>
      </div>
      <div class="services-container">
-        
+        <div class="srv-box">
+
      </div>
 </body>
 </html>
