--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 </div>
             </div>
             <div class="srv-box">
+                <i class="fas fa-cog fa-3x"></i>
             </div>
 </body>
 </html>
