--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             </div>
             <div class="srv-box">
                 <i class="fas fa-cog fa-3x"></i>
+                <div class="text">
             </div>
 </body>
 </html>
