--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <div class="srv-box">
                 <i class="fas fa-cog fa-3x"></i>
                 <div class="text">
+                    <h3>Vorem amet intuitive</h3>
             </div>
 </body>
 </html>
