--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                       </p>
                     </div>
                 </div>
-                <div class="srv-box">
+                <div class="srv-box"></div>
             </div>
 </body>
 </html>
