add class:fas fa pencil

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                       </p>
                     </div>
                 </div>
-                <div class="srv-box"></div>
+                <div class="srv-box">
+                    <i class="fas fa-pencil-ruler fa-3x"></i>
+                </div>
             </div>
 </body>
 </html>
