--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="srv-box">
                     <i class="fas fa-pencil-ruler fa-3x"></i>
-
+                    <div class="text">
                 </div>
             </div>
 </body>
