--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           </p>
                         </div>
                     </div>
-                    <div class="srv-box">
+                    <div class="srv-box"></div>
             </div>
 </body>
 </html>
