--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                           </p>
                         </div>
                     </div>
-                    <div class="srv-box"></div>
+                    <div class="srv-box">
+                        <i class="fas fa-camera fa-3x"></i>
+                    </div>
             </div>
 </body>
 </html>
