--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                     </div>
                     <div class="srv-box">
                         <i class="fas fa-camera fa-3x"></i>
+                        <div class="text">
+                            
+                        </div>
                     </div>
             </div>
 </body>
