create another class

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                     </div>
                     <div class="srv-box">
                         <i class="fas fa-camera fa-3x"></i>
-                        <div class="text">
-                            
+                        <div class="text"></div>
+
                         </div>
                     </div>
             </div>
