--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                     </div>
                     <div class="srv-box">
                         <i class="fas fa-camera fa-3x"></i>
-                        <div class="text"></div>
+                        <div class="text">
+                            <h3>Vorem amet intuitive</h3>
+                        </div>
 
                         </div>
                     </div>
