--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
                               </p>
                         </div>
 
-                        </div>
+                      </div>
                     </div>
+                </div>
             </div>
+              <!-- End Services -->
 </body>
 </html>
