--- a/index.html
+++ b/index.html
@@ -121,5 +121,7 @@
                 </div>
             </div>
               <!-- End Services -->
+                <!-- Start Design -->
+                <div class="design">
 </body>
 </html>
