--- a/index.html
+++ b/index.html
@@ -123,5 +123,7 @@
               <!-- End Services -->
                 <!-- Start Design -->
                 <div class="design">
+                    
+                </div>
 </body>
 </html>
