--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <!-- End Services -->
                 <!-- Start Design -->
                 <div class="design">
-                    
+                    <div class="image">     
                 </div>
 </body>
 </html>
