--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 <!-- Start Design -->
                 <div class="design">
                     <div class="image">     
+                        <img decoding="async" src="images/mobile.jpg" alt="Mobile" />
                 </div>
 </body>
 </html>
