--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
                     <div class="image">     
                         <img decoding="async" src="images/mobile.jpg" alt="Mobile" />
                 </div>
+                <div class="text"></div>
 </body>
 </html>
