--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <img decoding="async" src="images/mobile.jpg" alt="Mobile" />
                 </div>
                 <div class="text">
-
+                    <h2>Our Design Comes With...</h2>
                 </div>
 </body>
 </html>
