add responive design

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="text">
                     <h2>Our Design Comes With...</h2>
                     <ul>
-                        
+                        <li>Responsive Design</li>
                     </ul>
                 </div>
 </body>
