--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <ul>
                         <li>Responsive Design</li>
                         <li>Modern And Clean Design</li>
+                        <li>Clean Code</li>
                     </ul>
                 </div>
 </body>
