add browser friendly

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                         <li>Responsive Design</li>
                         <li>Modern And Clean Design</li>
                         <li>Clean Code</li>
+                        <li>Browser Friendly</li>
                     </ul>
                 </div>
 </body>
