--- a/index.html
+++ b/index.html
@@ -135,5 +135,7 @@
                         <li>Browser Friendly</li>
                     </ul>
                 </div>
+            </div>
+              <!-- End Design -->
 </body>
 </html>
