--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                <!-- Start Portfolio -->
                <div class="portfolio">
                 <div class="container">
-                    
+                    <div class="main-heading">
+                        
+                    </div>
                 </div>
 
                </div>
