--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                <div class="portfolio">
                 <div class="container">
                     <div class="main-heading">
-                        
+                        <h2>Portfolio</h2>
                     </div>
                 </div>
 
