--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
                             tincidunt.
                           </p>
                     </div>
+                    <ul class="shuffle"></ul>
+                    
                 </div>
 
                </div>
