--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                           </p>
                     </div>
                     <ul class="shuffle"></ul>
+                    <li class="active">All</li>
 
                 </div>
 
