--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <ul class="shuffle"></ul>
                     <li class="active">All</li>
-
+                    <li>App</li>
                 </div>
 
                </div>
