--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                     <ul class="shuffle"></ul>
                     <li class="active">All</li>
                     <li>App</li>
+                    <li>Photo</li>
+
                 </div>
 
                </div>
