--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <li class="active">All</li>
                     <li>App</li>
                     <li>Photo</li>
-
+                    <li>Web</li>
                 </div>
 
                </div>
