--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
                     <li>App</li>
                     <li>Photo</li>
                     <li>Web</li>
+                    <li>Print</li>
+                </ul>
                 </div>
 
                </div>
