--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                     <li>Web</li>
                     <li>Print</li>
                 </ul>
-                </div>
-
+             </div>
+             <div class="imgs-container">
                </div>
 </body>
 </html>
