--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                 </ul>
              </div>
              <div class="imgs-container">
+                <div class="box"></div>
+                
                </div>
 </body>
 </html>
