--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                 </ul>
              </div>
              <div class="imgs-container">
-                <div class="box"></div>
+                <div class="box">
+                    <img decoding="async" src="images/shuffle.jpg" alt="" />
+                </div>
 
                </div>
 </body>
