--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
              <div class="imgs-container">
                 <div class="box">
                     <img decoding="async" src="images/shuffle.jpg" alt="" />
+                    <div class="caption">
                 </div>
 
                </div>
