--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 <div class="box">
                     <img decoding="async" src="images/shuffle.jpg" alt="" />
                     <div class="caption">
+                        <h4>Awesome Image</h4>
                     </div>
 
                </div>
