--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                     <img decoding="async" src="images/shuffle.jpg" alt="" />
                     <div class="caption">
                         <h4>Awesome Image</h4>
+                        <p>Photography</p>
                     </div>
 
                </div>
