--- a/index.html
+++ b/index.html
@@ -165,5 +165,6 @@
 
                </div>
                <div class="box">
+                <img decoding="async" src="images/shuffle2.jpg" alt="" />
 </body>
 </html>
