--- a/index.html
+++ b/index.html
@@ -166,5 +166,6 @@
                </div>
                <div class="box">
                 <img decoding="async" src="images/shuffle2.jpg" alt="" />
+                <div class="caption">
 </body>
 </html>
