--- a/index.html
+++ b/index.html
@@ -167,5 +167,6 @@
                <div class="box">
                 <img decoding="async" src="images/shuffle2.jpg" alt="" />
                 <div class="caption">
+                    <h4>Awesome Image</h4>
 </body>
 </html>
