--- a/index.html
+++ b/index.html
@@ -168,5 +168,6 @@
                 <img decoding="async" src="images/shuffle2.jpg" alt="" />
                 <div class="caption">
                     <h4>Awesome Image</h4>
+                    <p>Photography</p>
 </body>
 </html>
