--- a/index.html
+++ b/index.html
@@ -169,5 +169,8 @@
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
 </body>
 </html>
