--- a/index.html
+++ b/index.html
@@ -172,5 +172,6 @@
                 </div>
             </div>
             <div class="box">
+                <img decoding="async" src="images/shuffle3.jpg" alt="" />
 </body>
 </html>
