--- a/index.html
+++ b/index.html
@@ -173,4 +173,5 @@
             </div>
             <div class="box">
             <img decoding="async" src="images/shuffle-03.jpg" alt="" />
+            <div class="caption">
 </html>
