--- a/index.html
+++ b/index.html
@@ -174,4 +174,5 @@
             <div class="box">
             <img decoding="async" src="images/shuffle-03.jpg" alt="" />
             <div class="caption">
+                <h4>Awesome Image</h4>
 </html>
