--- a/index.html
+++ b/index.html
@@ -175,4 +175,7 @@
             <img decoding="async" src="images/shuffle-03.jpg" alt="" />
             <div class="caption">
                 <h4>Awesome Image</h4>
+                <p>Photography</p>
+            </div>
+          </div>
 </html>
