--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
+                <div class="box">
             </div>
           </div>
 </html>
