--- a/index.html
+++ b/index.html
@@ -175,8 +175,11 @@
             <img decoding="async" src="images/shuffle-03.jpg" alt="" />
             <div class="caption">
                 <h4>Awesome Image</h4>
-                <p>Photography</p>
-                <div class="box">
+                <p>Photography</p> 
                 </div>
+            </div>
+            <div class="box">
+                <img decoding="async" src="images/shuffle4.jpg" alt="" />
           </div>
+
 </html>
