--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             </div>
             <div class="box">
                 <img decoding="async" src="images/shuffle4.jpg" alt="" />
+                <div class="caption">
           </div>
 
 </html>
