--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
             <div class="box">
                 <img decoding="async" src="images/shuffle4.jpg" alt="" />
                 <div class="caption">
-                    <h4>Awesome Image</h4>     
+                    <h4>Awesome Image</h4>
+                    <p>Photography</p>     
           </div>
 
 </html>
