--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
                     <p>Photography</p>
                 </div>
               </div>
-      
+              <div class="box">
 
 </html>
