--- a/index.html
+++ b/index.html
@@ -186,5 +186,6 @@
                 </div>
               </div>
               <div class="box">
+                <img decoding="async" src="images/shuffle5.jpg" alt="" />
 
 </html>
