--- a/index.html
+++ b/index.html
@@ -189,5 +189,6 @@
                 <img decoding="async" src="images/shuffle5.jpg" alt="" />
                 <div class="caption">
                     <h4>Awesome Image</h4>
+                    <p>Photography</p>
 
 </html>
