--- a/index.html
+++ b/index.html
@@ -193,5 +193,6 @@
                 </div>
             </div>
             <div class="box">
+                <img decoding="async" src="images/shuffle5.jpg" alt="" />
 
 </html>
