--- a/index.html
+++ b/index.html
@@ -201,5 +201,6 @@
             </div>
             <div class="box">
                 <img decoding="async" src="images/shuffle7.jpg" alt="" />
+                <div class="caption">
 
 </html>
