--- a/index.html
+++ b/index.html
@@ -202,5 +202,6 @@
             <div class="box">
                 <img decoding="async" src="images/shuffle7.jpg" alt="" />
                 <div class="caption">
+                    <h4>Awesome Image</h4>
 
 </html>
