--- a/index.html
+++ b/index.html
@@ -203,5 +203,6 @@
                 <img decoding="async" src="images/shuffle7.jpg" alt="" />
                 <div class="caption">
                     <h4>Awesome Image</h4>
+                    <p>Photography</p>
 
 </html>
