--- a/index.html
+++ b/index.html
@@ -204,5 +204,8 @@
                 <div class="caption">
                     <h4>Awesome Image</h4>
                     <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
 
 </html>
