--- a/index.html
+++ b/index.html
@@ -206,6 +206,6 @@
                     <p>Photography</p>
                 </div>
             </div>
-            <div class="box">
+           x<div class="box">
 
 </html>
