--- a/index.html
+++ b/index.html
@@ -207,5 +207,6 @@
                 </div>
             </div>
            x<div class="box">
+            <img decoding="async" src="images/shuffle8.jpg" alt="" />
 
 </html>
