--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <p>Photography</p>
                 </div>
             </div>
-           x<div class="box">
+           <div class="box">
             <img decoding="async" src="images/shuffle8.jpg" alt="" />
 
 </html>
