--- a/index.html
+++ b/index.html
@@ -208,5 +208,6 @@
             </div>
            <div class="box">
             <img decoding="async" src="images/shuffle8.jpg" alt="" />
+            <div class="caption">
 
 </html>
