--- a/index.html
+++ b/index.html
@@ -209,5 +209,6 @@
            <div class="box">
             <img decoding="async" src="images/shuffle8.jpg" alt="" />
             <div class="caption">
+                <h4>Awesome Image</h4>
 
 </html>
