--- a/index.html
+++ b/index.html
@@ -211,5 +211,9 @@
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
+            </div>
+        </div>
+      </div>
+      <a href="#" class="more">More</a>
 
 </html>
