--- a/index.html
+++ b/index.html
@@ -217,5 +217,7 @@
       <a href="#" class="more">More</a>
     </div>
     <!-- End Portfolio -->
+    <!-- Start Video -->
+    <div class="video">
 
 </html>
