--- a/index.html
+++ b/index.html
@@ -220,5 +220,6 @@
     <!-- Start Video -->
     <div class="video">
         <video autoplay muted loop>
+            <source src="images/awesome.mp4" type="video/mp4" />
 
 </html>
