--- a/index.html
+++ b/index.html
@@ -221,5 +221,7 @@
     <div class="video">
         <video autoplay muted loop>
             <source src="images/awesome.mp4" type="video/mp4" />
+        </video>
+        <div class="text">
 
 </html>
