--- a/index.html
+++ b/index.html
@@ -223,5 +223,5 @@
             <source src="images/awesome.mp4" type="video/mp4" />
         </video>
         <div class="text">
-
+            <h2>Super Awesome Video Here</h2>
 </html>
