--- a/index.html
+++ b/index.html
@@ -224,4 +224,5 @@
         </video>
         <div class="text">
             <h2>Super Awesome Video Here</h2>
+            <p>Its All You Need</p>
 </html>
