add   class=main-heading

--- a/index.html
+++ b/index.html
@@ -232,4 +232,5 @@
        <!-- Start About -->
        <div class="about">
         <div class="container">
+            <div class="main-heading">
 </html>
