--- a/index.html
+++ b/index.html
@@ -233,4 +233,5 @@
        <div class="about">
         <div class="container">
             <div class="main-heading">
+                <h2>About Us</h2>
 </html>
