--- a/index.html
+++ b/index.html
@@ -238,4 +238,6 @@
                     Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
                     tincidunt.
                   </p>
+                </div>
+                <img decoding="async" src="images/about.jpg" alt="" />
 </html>
