--- a/index.html
+++ b/index.html
@@ -240,4 +240,7 @@
                   </p>
                 </div>
                 <img decoding="async" src="images/about.jpg" alt="" />
+            </div>
+        </div>
+        <!-- End About -->
 </html>
