--- a/index.html
+++ b/index.html
@@ -243,4 +243,7 @@
             </div>
         </div>
         <!-- End About -->
+        <!-- Start Stats -->
+        <div class="stats">
+
 </html>
