--- a/index.html
+++ b/index.html
@@ -245,5 +245,6 @@
         <!-- End About -->
         <!-- Start Stats -->
         <div class="stats">
+            <div class="container">
 
 </html>
