--- a/index.html
+++ b/index.html
@@ -246,5 +246,6 @@
         <!-- Start Stats -->
         <div class="stats">
             <div class="container">
+                <div class="box">
 
 </html>
