--- a/index.html
+++ b/index.html
@@ -247,5 +247,6 @@
         <div class="stats">
             <div class="container">
                 <div class="box">
+                    <i class="fas fa-mug-hot"></i>
 
 </html>
