--- a/index.html
+++ b/index.html
@@ -248,5 +248,6 @@
             <div class="container">
                 <div class="box">
                     <i class="fas fa-mug-hot"></i>
+                    <div class="number">1.236</div>
 
 </html>
