--- a/index.html
+++ b/index.html
@@ -252,5 +252,6 @@
                     <p>Coffee Drinks</p>
                 </div>
                 <div class="box">
+                    <i class="far fa-folder"></i>
 
 </html>
