--- a/index.html
+++ b/index.html
@@ -253,5 +253,6 @@
                 </div>
                 <div class="box">
                     <i class="far fa-folder"></i>
+                    <div class="number">256</div>
 
 </html>
