--- a/index.html
+++ b/index.html
@@ -254,5 +254,7 @@
                 <div class="box">
                     <i class="far fa-folder"></i>
                     <div class="number">256</div>
+                    <p>Completed Projects</p>
+
 
 </html>
