--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
                     <i class="far fa-folder"></i>
                     <div class="number">256</div>
                     <p>Completed Projects</p>
+                </div>
+                <div class="box">
 
 
 </html>
