--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     <p>Completed Projects</p>
                 </div>
                 <div class="box">
+                    <i class="far fa-envelope"></i>
 
 
 </html>
