--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                 <div class="box">
                     <i class="far fa-envelope"></i>
                     <div class="number">1,743</div>
+                    <p>Mail Sent</p>
 
 
 </html>
