--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
                     <i class="far fa-envelope"></i>
                     <div class="number">1,743</div>
                     <p>Mail Sent</p>
+                </div>
+                 <div class="box">
 
 
 </html>
