--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                     <p>Mail Sent</p>
                 </div>
                  <div class="box">
+                    <i class="fas fa-trophy"></i>
 
 
 </html>
