--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                 </div>
                  <div class="box">
                     <i class="fas fa-trophy"></i>
+                    <div class="number">17</div>
 
 
 </html>
