--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                  <div class="box">
                     <i class="fas fa-trophy"></i>
                     <div class="number">17</div>
+                    <p>Awards Received</p>
 
 
 </html>
