--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
                     <i class="fas fa-trophy"></i>
                     <div class="number">17</div>
                     <p>Awards Received</p>
+                </div>
+            </div>
+          </div>
+          <!-- End Stats -->
 
 
 </html>
