--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@
             </div>
           </div>
           <!-- End Stats -->
+          <!-- Start Skills -->
+          <div class="our-skills"></div>
 
 
 </html>
