--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
           </div>
           <!-- End Stats -->
           <!-- Start Skills -->
-          <div class="our-skills"></div>
+          <div class="our-skills">
+            
+          </div>
 
 
 </html>
