--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
           <!-- End Stats -->
           <!-- Start Skills -->
           <div class="our-skills">
-            
+            <div class="testimonials">
+                
+            </div>
           </div>
 
 
