--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           <!-- Start Skills -->
           <div class="our-skills">
             <div class="testimonials">
-                
+                <h3>Testimonials</h3>
             </div>
           </div>
 
