--- a/index.html
+++ b/index.html
@@ -278,6 +278,8 @@
                     tincidunt.
                   </p>
                   <div class="content">
+                    <img decoding="async" src="images/skills.jpg" alt="" />
+          
             </div>
           </div>
 
