--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                   </p>
                   <div class="content">
                     <img decoding="async" src="images/skills.jpg" alt="" />
+                    <div class="text">
           
             </div>
           </div>
