--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
                         Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
               tincidunt.
               <p>John Doe, CEO</p>
+            </div>
+        </div>
+        <div class="content">
+            
           
             </div>
           </div>
