--- a/index.html
+++ b/index.html
@@ -286,7 +286,8 @@
             </div>
         </div>
         <div class="content">
-            
+            <img decoding="async" src="images/skills2.jpg" alt="" />
+            <div class="text">
           
             </div>
           </div>
