--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
         <div class="content">
             <img decoding="async" src="images/skills2.jpg" alt="" />
             <div class="text">
+                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
+              tincidunt.
+              <p>John Doe, CEO</p>
           
             </div>
           </div>
