un ordered list

--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
                 Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
               tincidunt.
               <p>John Doe, CEO</p>
+            </div>
+        </div>
+        <ul class="bullets">
           
             </div>
           </div>
