--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
             </div>
         </div>
         <ul class="bullets">
+            <li></li>
+        </ul>
+    </div>
+    <div class="skills">
           
             </div>
           </div>
