--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
             <h4>Adobe</h4>
             <div class="prog">
                 <span style="width: 90%" data-progress="90%"></span>
+            </div>
+        </div>
+        <div class="prog-holder">
           
             </div>
           </div>
