--- a/index.html
+++ b/index.html
@@ -313,6 +313,9 @@
             <h4>Html &amp; Css</h4>
             <div class="prog">
                 <span style="width: 85%" data-progress="85%"></span>
+            </div>
+        </div>
+        <div class="prog-holder"></div>
           
             </div>
           </div>
