--- a/index.html
+++ b/index.html
@@ -315,7 +315,9 @@
                 <span style="width: 85%" data-progress="85%"></span>
             </div>
         </div>
-        <div class="prog-holder"></div>
+        <div class="prog-holder">
+            <h4>JavaScript</h4>
+        </div>
           
             </div>
           </div>
