--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
             <h4>JavaScript</h4>
             <div class="prog">
                 <span style="width: 80%" data-progress="80%"></span>
+            </div>
         </div>
+        <div class="prog-holder">
           
             </div>
           </div>
