--- a/index.html
+++ b/index.html
@@ -325,9 +325,14 @@
             <h4>Php</h4>
             <div class="prog">
                 <span style="width: 90%" data-progress="90%"></span>
-          
             </div>
-          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Skills -->
+  
+           
 
 
 </html>
