--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
   <div class="quote">
     <div class="container">
         <q>accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</q>
-           
+        <span>John Doe</span> 
 
 
-</html>
+</html> 
