--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
         <span>John Doe</span>
     </div>
 </div>
-<!-- End Quote --> 
+<!-- End Quote -->
+<!-- Start Pricing -->
+<div class="pricing"> 
 
 
 </html> 
