--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
 </div>
 <!-- End Quote -->
 <!-- Start Pricing -->
-<div class="pricing"> 
+<div class="pricing">
+    <div class="container"> 
 
 
 </html> 
