--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 <!-- End Quote -->
 <!-- Start Pricing -->
 <div class="pricing">
-    <div class="container"> 
+    <div class="container">
+        <div class="main-heading"></div> 
 
 
 </html> 
