--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
 <!-- Start Pricing -->
 <div class="pricing">
     <div class="container">
-        <div class="main-heading"></div> 
+        <div class="main-heading">
+            <h2>Pricing</h2>
 
 
 </html> 
