--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
                 Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
                 tincidunt.
               </p>
+            </div>
+            <div class="plans">
 
 
 </html> 
