--- a/index.html
+++ b/index.html
@@ -363,6 +363,11 @@
             </ul>
             <div class="foot">
                 <a href="#">Buy Now</a>
+            </div>
+        </div>
+        <div class="plan">
+            
+        </div>
 
 
 </html> 
