--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <li>Feature</li>
             </ul>
             <div class="foot">
-                
+                <a href="#">Buy Now</a>
         </div>
 
 
