--- a/index.html
+++ b/index.html
@@ -378,7 +378,8 @@
             </ul>
             <div class="foot">
                 <a href="#">Buy Now</a>
+            </div>
         </div>
-
+        <div class="plan">
 
 </html> 
