--- a/index.html
+++ b/index.html
@@ -383,5 +383,6 @@
         <div class="plan">
             <div class="head">
                 <h3>Pro</h3>
+                <span>39</span>
 
 </html> 
