--- a/index.html
+++ b/index.html
@@ -384,5 +384,7 @@
             <div class="head">
                 <h3>Pro</h3>
                 <span>39</span>
+            </div>
+            <ul>
 
 </html> 
