--- a/index.html
+++ b/index.html
@@ -388,5 +388,6 @@
             <ul>
                 <li>Feature No 1</li>
                 <li>Extra Feature</li>
+                <li>Extra Feature No 2</li>
 
 </html> 
