--- a/index.html
+++ b/index.html
@@ -390,5 +390,7 @@
                 <li>Extra Feature</li>
                 <li>Extra Feature No 2</li>
                 <li>Feature</li>
+            </ul>
+            <div class="foot">
 
 </html> 
