--- a/index.html
+++ b/index.html
@@ -392,5 +392,6 @@
                 <li>Feature</li>
             </ul>
             <div class="foot">
+                <a href="#">Buy Now</a>
 
 </html> 
