--- a/index.html
+++ b/index.html
@@ -393,5 +393,9 @@
             </ul>
             <div class="foot">
                 <a href="#">Buy Now</a>
+            </div>
+        </div>
+        <div class="plan">
+            
 
 </html> 
