--- a/index.html
+++ b/index.html
@@ -398,5 +398,6 @@
         <div class="plan">
             <div class="head">
                 <h3>Platinum</h3>
+                <span>49</span>
 
 </html> 
