--- a/index.html
+++ b/index.html
@@ -399,5 +399,7 @@
             <div class="head">
                 <h3>Platinum</h3>
                 <span>49</span>
+            </div>
+         <ul>
 
 </html> 
