--- a/index.html
+++ b/index.html
@@ -407,5 +407,6 @@
               <li>Feature</li>
             </ul>
             <div class="foot">
+                <a href="#">Buy Now</a>
 
 </html> 
