--- a/index.html
+++ b/index.html
@@ -408,5 +408,9 @@
             </ul>
             <div class="foot">
                 <a href="#">Buy Now</a>
+            </div>
+        </div>
+      </div>
+      <p class="contact-text">Contact us if you have special request</p>
 
 </html> 
