--- a/index.html
+++ b/index.html
@@ -413,5 +413,8 @@
       </div>
       <p class="contact-text">Contact us if you have special request</p>
       <a href="#" class="contact-link">Contact Us</a>
+    </div>
+</div>
+<!-- End Pricing -->
 
 </html> 
