--- a/index.html
+++ b/index.html
@@ -420,4 +420,6 @@
 <div class="subscribe">
     <div class="container">
         <form action="">
+            <i class="far fa-envelope fa-lg"></i>
+            
 </html> 
