--- a/index.html
+++ b/index.html
@@ -421,5 +421,5 @@
     <div class="container">
         <form action="">
             <i class="far fa-envelope fa-lg"></i>
-            
+            <input type="email" name="mail" placeholder="Your Email" />
 </html> 
