--- a/index.html
+++ b/index.html
@@ -422,4 +422,5 @@
         <form action="">
             <i class="far fa-envelope fa-lg"></i>
             <input type="email" name="mail" placeholder="Your Email" />
+            <input type="submit" value="Subscribe" />
 </html> 
