--- a/index.html
+++ b/index.html
@@ -427,4 +427,8 @@
         <p>
             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.
           </p>
+        </div>
+    </div>
+    <!-- End Subscribe -->
+    
 </html> 
