add  class=main-heading

--- a/index.html
+++ b/index.html
@@ -433,4 +433,5 @@
      <!-- Start Contact -->
      <div class="contact">
         <div class="container">
+            <div class="main-heading">
 </html> 
