--- a/index.html
+++ b/index.html
@@ -434,4 +434,5 @@
      <div class="contact">
         <div class="container">
             <div class="main-heading">
+                <h2>Contact Us</h2>
 </html> 
