add form action

--- a/index.html
+++ b/index.html
@@ -439,4 +439,7 @@
                     Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
                     tincidunt.
                   </p>
+                </div>
+                <div class="content">
+                    <form action="">
 </html> 
