--- a/index.html
+++ b/index.html
@@ -453,6 +453,11 @@
             <span class="phone">+00 123.456.789</span>
             <h4>Where We Are</h4>
             <address>Awesome Address 17<br />New York, NYC<br />123-4567-890<br />USA</address>
+        </div>
+    </div>
+  </div>
+</div>
+<!-- End Contact -->
+</body>
 
-          </div>
 </html> 
