--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
     <div class="container">
         <img decoding="async" src="images/logo...jpg" alt="Logo" />
         <p>We Are Social</p>
+        <div class="social-icons">
 </body>
 
 </html> 
